gateway-api/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: example-gateway
      port: 80
#  hostnames:
#  - ""
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/product"
      backendRefs:
        - name: product-svc
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: "/user"
      backendRefs:
        - name: user-svc
          port: 8080
